--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -36,6 +36,7 @@
                     <div th:if="${registered}" class="alert alert-success">Registration successful. Please log in.</div>
 
                     <form th:action="@{/login}" method="post" novalidate>
+                        <div th:insert="~{fragments/csrf :: csrf}"></div>
                         <input type="hidden" th:name="${_csrf?.parameterName}" th:value="${_csrf?.token}"/>
 
                         <div class="mb-3">
