--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -35,6 +35,7 @@
 
                     <form th:action="@{/register}" th:object="${form}" method="post" novalidate>
                         <!-- CSRF (safe even if CSRF is disabled) -->
+                        <div th:insert="~{fragments/csrf :: csrf}"></div>
                         <input type="hidden" th:name="${_csrf?.parameterName}" th:value="${_csrf?.token}"/>
 
                         <div class="mb-3">
